Improve style: top border is less distinct & fix page wrapping

--- a/qiskit_sphinx_theme/furo/base/static/styles/qiskit_changes.css
+++ b/qiskit_sphinx_theme/furo/base/static/styles/qiskit_changes.css
@@ -123,6 +123,16 @@ html {
   scroll-behavior: auto;
 }
 
+/* Without this, long titles break the site. This is especially a problem in API docs. */
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  overflow-wrap: break-word;
+}
+
 /* ------------------------------------------------------------------------------
 * Top nav bar
 * ------------------------------------------------------------------------------- */
@@ -494,12 +504,15 @@ dl:not(.docutils) dt {
   background-color: var(--color-background-secondary);
 }
 
-/* We normally want to use inline-block for definition terms so that the purple border we add on
-*  top does not stretch across the whole screen. But, we make an exception for the top-level `dt`
-* on the page because it will have a `[source]` button that floats to the right. The spacing of
-* that is non-trivial and was the source of issues in Pytorch, so we stick with Furo's spacing. */
+/* Rules that impact the top-level entry for the code object, which e.g. has the `[source]` button. */
 section > dl:not(.docutils) > dt:nth-child(1) {
+  /* We normally want to use inline-block for definition terms so that the purple border we add on
+  *  top does not stretch across the whole screen. But, we make an exception here it will have a
+  * `[source]` button that floats to the right. The spacing of that is non-trivial and was the
+  * source of issues in Pytorch, so we stick with Furo's spacing. */
   display: block;
+  /* Make the border less thick so its clear the top-level page header corresponds to this line. */
+  border-top-width: 1px;
 }
 
 /* Fix some of the definition terms like "Parameters" having no padding and being in all caps. */
